# framework.security.secure-storage

./: .gitignore  CMakeLists.txt  project.config  secure-storage.pc.in  ss-server.manifest
TC/testcase/: tslist  utc_secure_storage  utc_secure_storage.c
client/non-tz/include/: ss_client_intf.h
client/non-tz/src/: ss_client_intf.c  ss_client_ipc.c  ss_manager.c
debian/: changelog
doc/: secure_storage_doc.h
include/: SLP_secure-storage_PG.h  secure_storage.h  ss_manager.h
packaging/: non-tz-secure-storage.service  secure-storage.service  secure-storage.spec  ss-client-tests.manifest  ss-server.manifest  ss-server.socket
prng/include/: ss_prng.h  ss_prng_impl.h
prng/src/: ss_prng.c
res/: CMakeLists.txt  salt
server/non-tz/include/: ss_server_ipc.h  ss_server_main.h
server/non-tz/src/: ss_server_ipc.c  ss_server_main.c
server/src/: ss_server_ipc.c  ss_server_main.c
src/client/: CMakeLists.txt
src/client/include/: ss_client_intf.h  ss_client_ipc.h
src/client/src/: ss_client_intf.c  ss_client_ipc.c  ss_manager.c
src/server/: CMakeLists.txt
src/server/prng/include/: ss_prng.h  ss_prng_impl.h
src/server/prng/src/: ss_prng.c
src/server/secure-storage/include/: ss_server_ipc.h  ss_server_main.h
src/server/secure-storage/src/: ss_server_ipc.c  ss_server_main.c
systemd/: CMakeLists.txt  secure-storage.service  ss-server.socket
testcases/: CMakeLists.txt  ss_test.c  test_manager.c  test_ss_manager.c  unit_test.c
