SET(SS_CLIENT_TEST_PATH ${PROJECT_SOURCE_DIR}/testcases)

SET(SS_CLIENT_TEST_SOURCES
    ${SS_CLIENT_TEST_PATH}/test_ss_manager.c
    #${SS_CLIENT_TEST_PATH}/test_manager.c
    #${SS_CLIENT_TEST_PATH}/ss_test.c
    #${SS_CLIENT_TEST_PATH}/unit_test.c
    )

SET_SOURCE_FILES_PROPERTIES(
    ${SS_CLIENT_TEST_SOURCES}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fPIE")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/client/
    )

ADD_EXECUTABLE(${TARGET_SS_CLIENT_TEST} ${SS_CLIENT_TEST_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_SS_CLIENT_TEST}
    ${TARGET_SS_CLIENT}
    )

INSTALL(TARGETS ${TARGET_SS_CLIENT_TEST} DESTINATION bin)
