PKG_CHECK_MODULES(SS_CLIENT_DEP
    REQUIRED
    capi-base-common
    openssl
    dlog
    )

SET(SS_CLIENT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

SET(SS_CLIENT_SOURCES
    ${SS_CLIENT_PATH}/src/ss_client_intf.c
    ${SS_CLIENT_PATH}/src/ss_client_ipc.c
    ${SS_CLIENT_PATH}/src/ss_manager.c
    )

INCLUDE_DIRECTORIES(
    SYSTEM
    ${SS_CLIENT_DEP_INCLUDE_DIRS}
    ${PROJECT_SOURCE_DIR}/include
    ${SS_CLIENT_PATH}/include
    )

ADD_LIBRARY(${TARGET_SS_CLIENT} SHARED ${SS_CLIENT_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_SS_CLIENT}
    ${SS_CLIENT_DEP_LIBRARIES}
    )

SET_TARGET_PROPERTIES(
    ${TARGET_SS_CLIENT}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fPIC -fvisibility=hidden"
        SOVERSION ${VERSION_MAJOR}
        VERSION ${VERSION}
    )

INSTALL(TARGETS ${TARGET_SS_CLIENT} DESTINATION lib)
